--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = https://github.com/ervandew/supertab
+[submodule "bundle/systemverilog"]
+	path = bundle/systemverilog
+	url = http://github.com/morganp/vim-SystemVerilog.git
